# blackjackHelper-Aht

./: .coveragerc  README.md  pyproject.toml  tasks.py
data/: single_deck_so17_soft.json
data/charts/single_deck/hit_on_soft_17/: normal.json  soft.json  split.json
data/charts/single_deck/stand_on_soft_17/: soft.json
documentation/: architecture.md  changelog.md  requirements.md  testdocument.md  timeTracking.md  timetracking.md  userManual.md  usermanual.md
src/: blackjack_helper.py  blackjack_interface.py  chart.py  index.py
src/data/: singleDeckNormal.json  single_deck_so17_normal.json  single_deck_so17_soft.json  single_deck_so17_split.json
src/services/: blackjack_helper.py  chart.py
src/tests/: blackjack_helper_test.py  chart_test.py
src/ui/: blackjack_interface.py
