[tool.poetry]
name = "blackjackhelper-aht"
version = "0.1.0"
description = ""
authors = ["Markus Wahlman <markus.wahlman@helsinki.fi>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dearpygui = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
autopep8 = "^2.3.2"
pytest = "^8.3.5"
invoke = "^2.2.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
